Layout issue fixes and small design iterations

--- a/Project Apollo/Styles/components/_project-post.scss
+++ b/Project Apollo/Styles/components/_project-post.scss
@@ -65,8 +65,9 @@
           border: 1px solid transparent !important;
 
           &.apply-btn {
-            padding: 8px 15px !important;
-            color: $medium-gray-color !important;
+            color: #fff !important;
+            background-color: $primary-color;
+            border-color: $primary-color;
             font-size: 14px !important;
 
             &:hover {
@@ -74,13 +75,9 @@
             }
 
             &:disabled {
-              color: #fff !important;
-              background-color: $primary-color;
-              border-color: $primary-color;
-
-              &:hover {
-                border-color: $primary-color !important;
-              }
+              color: $medium-gray-color !important;
+              border: 1px solid transparent !important;
+              background-color: transparent;
             }
           }
 
@@ -193,7 +190,7 @@
         left: 5px;
         top: 2px;
         height: 35px;
-        width: 460px;
+        width: 450px;
         padding: 7px;
         outline: none;
 
