--- a/Project Apollo/Styles/pages/_home-page.scss
+++ b/Project Apollo/Styles/pages/_home-page.scss
@@ -17,7 +17,7 @@
   }
 
   .input-field {
-    left: 34px;
+    left: 27px;
   }
 
   button {
